# Presidium

./: .gitignore  README.md  RedLLM_Day1_Setup  deny.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/presidium-crypto/: Cargo.toml
crates/presidium-crypto/benches/: crypto_bench.rs
crates/presidium-crypto/fuzz/: Cargo.toml
crates/presidium-crypto/fuzz/fuzz_targets/: did_parsing.rs  dummy.rs  ratchet_decrypt.rs  vault_decrypt.rs  x3dh_initiate.rs
crates/presidium-crypto/src/: identity.rs  lib.rs  ratchet.rs  vault.rs  x3dh.rs
crates/presidium-crypto/tests/: identity_property.rs  property.rs  ratchet_property.rs  vault_property.rs  x3dh_property.rs
