[package]
name = "presidium-crypto"
version = "0.1.0"
edition = "2021"
description = "Signal Protocol primitives for Presidium"

[dependencies]
# Пока без зависимостей, кроме тестовых утилит
proptest = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
# Включает property-тесты в runtime (по умолчанию только dev-dependencies)
test-utils = ["proptest"]

[[bench]]
name = "crypto_bench"
harness = false
