[package]
name = "presidium-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for Presidium messenger"
license = "MIT"

[dependencies]
ed25519-dalek = "2"
bip39 = { version = "2", features = ["rand"] }
bs58 = "0.5"
thiserror = "1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[[bench]]
name = "crypto_bench"
harness = false
