[package]
name = "presidium-crypto-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Opt out of the workspace — fuzz crates need a separate Cargo metadata
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.presidium-crypto]
path = ".."

[[bin]]
name = "dummy"
path = "fuzz_targets/dummy.rs"

[[bin]]
name = "did_parsing"
path = "fuzz_targets/did_parsing.rs"
