[package]
name = "presidium-crypto-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Opt out of the root workspace — fuzz crates need separate Cargo metadata
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.presidium-crypto]
path = ".."

[[bin]]
name = "did_parsing"
path = "fuzz_targets/did_parsing.rs"

[[bin]]
name = "vault_decrypt"
path = "fuzz_targets/vault_decrypt.rs"
