[package]
name = "presidium-crypto-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Opt out of the root workspace — fuzz crates need separate Cargo metadata
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dependencies.presidium-crypto]
path = ".."

[[bin]]
name = "did_parsing"
path = "fuzz_targets/did_parsing.rs"

[[bin]]
name = "vault_decrypt"
path = "fuzz_targets/vault_decrypt.rs"

[[bin]]
name = "x3dh_initiate"
path = "fuzz_targets/x3dh_initiate.rs"

[[bin]]
name = "ratchet_decrypt"
path = "fuzz_targets/ratchet_decrypt.rs"
